swagger lecturer endpoint
